--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@
 # These are used to personalize your new site. If you look in the HTML files, you will see them accessed via {{ site.title }}, {{ site.email }}, and so on. You can create any custom variable you would like, and they will be accessible in the templates via {{ site.myvariable }}.
 
 # edit here to achieve your personal greatness
-url: https://meghangutshall.com/
-baseurl: ""  # the subpath of your site, e.g. /blog
 title: Feral Code Philly
 author: Meghan Gutshall
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:" This line will appear in your document head meta (for Google search results) and in your feed.xml site description.
   Thoughts from the wild experience of learning to program
+url: https://meghangutshall.com/ # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""  # the subpath of your site, e.g. /blog
 avatar: profile.png
 email: meghan.gutshall@gmail.com
 github: meg-gutshall
